Created README.md and updated .env file

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://cluster1_user:bkD5RUIFUoCo0NW7@cluster1.nltyt7a.mongodb.net/nodeapi?retryWrites=true&w=majority
+MONGO_URI=*******
 PORT=3000
